--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "module": "commonjs",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "target": "es2019",
-    "strict": true,
+    "strict": false,
     "sourceMap": false,
     "skipLibCheck": true,
     "outDir": "./dist",
